변수이름 수정